applications/integration/storage/structured_data/backend/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector: 
    app: mongo-server
  ports:
    - port: 27017
      targetPort: 27017
