applications/integration/storage/structured_data/backend/mongo-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mongodb-gateway
spec:
  selector:
    istio: istio-ingressgateway
  servers:
  - port:
      number: 27017
      name: tcp-mongo
      protocol: TCP
    hosts:
    - "mongo.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mongodb-virtualservice
spec:
  hosts:
  - "mongo.com"
  gateways:
  - mongodb-gateway
  tcp:
  - match:
    - port: 27017
    route:
    - destination:
        host: mongo-service.storage.svc.cluster.local
        port:
          number: 27017
